--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^3.4.1
+  flutter_lazy_loading: ^1.1.3
+  dio: ^5.7.0
+  flutter_image_compress: ^2.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
